# listing-agent

./: .env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 2402757ad5c9_add_category_id_to_listing_drafts.py  30fccd8e1e49_add_category_id_to_listing_drafts.py  4133effb8d2e_create_users_and_user_tokens_tables.py  43c45366f9b4_create_listing_drafts_table.py  579e1c82033d_add_remaining_fields_to_complete_the_.py  8a9e19c8774a_create_listing_drafts_table.py
app/: main.py
app/agents/: copywriter.py
app/api/: auth.py  costs.py  listings.py
app/core/: meli_auth.py  security.py
app/db/: database.py  deps.py  redis.py
app/models/: listing.py  user.py
app/tools/: category_tool.py
