[project]
name = "listing-agent-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Mizael Paredes"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
